team-4-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: team-4-api-deployment
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: team-4-api
        image: schultzk8steam04acr.azurecr.io/team-4-api:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: team-4-web-app-deployment
  labels:
    app: web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: team-4-web-app
        image: schultzk8steam04acr.azurecr.io/team-4-web-app:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: team-4-api-service
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80   
---
apiVersion: v1
kind: Service
metadata:
  name: team-4-web-app-service
spec:
  selector:
    app: web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80   
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  labels:
    app: api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/protocol: http
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/server-alias: "*.schultz-k8s-team-04.hackathon.schultz.dk"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
        - "*.schultz-k8s-team-04.hackathon.schultz.dk"
      secretName: tls-secret
  rules:
  - host: "schultz-k8s-team-04.hackathon.schultz.dk"
  - http:
      paths:
      - path: "/app(/|$)(.*)"
        backend:
          serviceName: team-4-web-app-service
          servicePort: 80
